--- a/asset/textdata/language/languagedata.csv
+++ b/asset/textdata/language/languagedata.csv
@@ -830,7 +830,7 @@ COMMON,1818,部队规模,,0
 COMMON,1819,支援范围,,0
 COMMON,1820,夜战视野,,0
 COMMON,1821,未拥有此类型,,0
-COMMON,1822,©Shirow Masamune，Production I.G/KODANSHA/GITS2045,,0
+COMMON,1822,  ,,0
 COMMON,1823,当前能源不足不满足机动装甲部署条件,,0
 COMMON,1824,可送信件数已达上限,,0
 COMMON,1825,该信件已寄出，无法进行更改,,0
@@ -1224,6 +1224,39 @@ HOME,20165,剧情,,0
 HOME,20166,本体,,0
 HOME,20167,扫荡,,0
 HOME,20168,有新的生涯任务,,0
+HOME,20169,{0}{1},,0
+HOME,20170,存在未通关关卡,,0
+HOME,20171,//n当前仍可获取<color=#E4A821>{0}</color>个<color=#E4A821>{1}</color>,,0
+HOME,20172,尚有<color=#E4A821>{0}</color>未开启,,0
+HOME,20173,积分模式<color=#E4A821>{0}</color>积分<color=#E4A821>{1}</color>,,0
+HOME,20174,今日战区挑战剩余<color=#E4A821>{0}</color>次,,0
+HOME,20175,今日密钥可完成任务剩余<color=#E4A821>{0}</color>个,,0
+HOME,20176,当前纲领积分<color=#E4A821>{0}</color>//n{1}//n{2},,0
+HOME,20177,当前可完成任务剩余<color=#E4A821>{0}</color>个,,0
+HOME,20178,<color=#E4A821>{0}</color>天后开放第<color=#E4A821>{1}</color>期任务,,0
+HOME,20179,当前全部任务已开放,,0
+HOME,20180,当期积分已到第<color=#E4A821>{0}</color>轮//nPT<color=#E4A821>{1}/6000</color>,,0
+HOME,20181,{0}还可获取<color=#E4A821>{1}</color>个扭蛋券,,0
+HOME,20182,今日基础动能剩余{0}个，基础势能剩余{1}个。,,0
+HOME,20183,今日每日事务进度<color=#E4A821>{0}</color>//n周任务进度<color=#E4A821>{1}</color>//n积分进度<color=#E4A821>{2}</color>,,0
+HOME,20184,可完成生涯任务，提升生涯等级,,0
+HOME,20185,电子脉冲当前数量{0}。,,0
+HOME,20186,全局经验已满，可撰写报告书,,0
+HOME,20187,前进营地可派遣探索小队,,0
+HOME,20188,，探索小队已归来,,0
+HOME,20189,可前往格纳库获取载具许可,,0
+HOME,20190,存在未观看的故事,,0
+HOME,20191,当前有后勤支援<color=#E4A821>{0}</color>,,0
+HOME,20192,<color=#E4A821>{0}</color>开放中{1},,0
+HOME,20193,<color=#E4A821>{0}</color>开放中,,0
+HOME,20194,//n捕获区域可刷新剩余时间<color=#E4A821>{0}</color>,,0
+HOME,20195,//n当前可进行捕获区域刷新,,0
+HOME,20196,剩余{0},,0
+HOME,20197,可进行模拟作战,,0
+HOME,20198,战区,,0
+HOME,20199,纲领,,0
+HOME,20200,当前赛季剩余<color=#E4A821>{0}</color>天//n,,0
+HOME,20201,{0}//n{1},,0
 DEPLOYMENT,30000,部署,,1
 DEPLOYMENT,30001,移动,,0
 DEPLOYMENT,30002,换位,,1
@@ -2649,7 +2682,7 @@ FACTORY,32293,等级,,0
 FACTORY,32294,---,,0
 FACTORY,32295,锚定构筑进行中,,0
 FACTORY,32296,使用构筑功能未建造出锚定目标时，将逐步提升其建造成功率,,0
-FACTORY,32297,活动规则：//n1、活动期间，可从活动人形列表中选择特定人形成为“锚定目标”，在活动界面点击“开始构筑”按钮，使用给定公式进行构筑；//n2、活动中，每次进行“锚定目标”的构筑，若本次构筑“锚定目标”失败，则下一次的构筑时会临时提升成功率，提升上限为100%；成功构筑“锚定目标”时，临时成功率会清零；//n3、构筑失败所提升的临时成功率，在活动期间会跟随“锚定目标”进行保留，不会应为切换“锚定目标”而清零；//n4、活动期间，最多通过“锚定目标”成功构筑1个人形，单个“锚定目标”只能被成功构筑1次；//n5、累计指定的锚定构筑次数后，锚定目标将必定构筑成功；//n6、“锚定目标”构筑成功初始几率与“工厂制造”无关。,,0
+FACTORY,32297,活动规则：//n1、活动期间，可从活动人形列表中选择特定人形成为“锚定目标”，在活动界面点击“开始构筑”按钮，使用给定公式进行构筑；//n2、活动中，每次进行“锚定目标”的构筑，若本次构筑“锚定目标”失败，则下一次的构筑时会临时提升成功率，提升上限为100%；成功构筑“锚定目标”时，临时成功率会清零；//n3、构筑失败所提升的临时成功率，在活动期间会跟随“锚定目标”进行保留，不会因为切换“锚定目标”而清零；//n4、活动期间，最多通过“锚定目标”成功构筑1个人形，单个“锚定目标”只能被成功构筑1次；//n5、累计指定的锚定构筑次数后，锚定目标将必定构筑成功；//n6、“锚定目标”构筑成功初始几率与“工厂制造”无关。,,0
 FACTORY,32298,人形床位不足，无法继续操作//n建议如下操作：,,0
 FACTORY,32299,装备仓库不足，无法继续操作//n建议如下操作：,,0
 FACTORY,32300,妖精床位不足，无法继续操作//n建议如下操作：,,0
@@ -2661,7 +2694,7 @@ FACTORY,32305,仓库容量不足,,0
 FACTORY,32306,基建扩展,,0
 FACTORY,32307,格里芬新人指挥官入职福利,,0
 FACTORY,32308,可设置特定人形为<color=#ffb400>锚定目标</color>,,0
-FACTORY,32309,新入职指挥官锚定构筑规则：//n1、指挥官可从人形列表中选择特定人形成为“锚定目标”，在锚定构筑界面点击“开始构筑”按钮，使用给定公式进行构筑；//n2、每次进行“锚定目标”的构筑，若本次构筑“锚定目标”失败，则下一次的构筑时会临时提升成功率，提升上限为100%；成功构筑“锚定目标”时，临时成功率会清零；//n3、构筑失败所提升的临时成功率，会跟随“锚定目标”进行保留，不会应为切换“锚定目标”而清零；//n4、在新入职指挥官锚定构筑中，单个“锚定目标”只能被成功构筑1次，最多可通过“锚定目标”成功构筑2个人形，活动将在成功构筑2个人形之后结束；//n5、累计指定的锚定构筑次数后，锚定目标将必定构筑成功；//n6、“锚定目标”构筑成功初始几率与“工厂制造”无关。,,0
+FACTORY,32309,新入职指挥官锚定构筑规则：//n1、指挥官可从人形列表中选择特定人形成为“锚定目标”，在锚定构筑界面点击“开始构筑”按钮，使用给定公式进行构筑；//n2、每次进行“锚定目标”的构筑，若本次构筑“锚定目标”失败，则下一次的构筑时会临时提升成功率，提升上限为100%；成功构筑“锚定目标”时，临时成功率会清零；//n3、构筑失败所提升的临时成功率，会跟随“锚定目标”进行保留，不会因为切换“锚定目标”而清零；//n4、在新入职指挥官锚定构筑中，单个“锚定目标”只能被成功构筑1次，最多可通过“锚定目标”成功构筑2个人形，活动将在成功构筑2个人形之后结束；//n5、累计指定的锚定构筑次数后，锚定目标将必定构筑成功；//n6、“锚定目标”构筑成功初始几率与“工厂制造”无关。,,0
 FACTORY,32310,当前没有空闲的制造栏位，无法进行锚定构筑。,,0
 FACTORY,32311,指定装备契约：,,0
 FACTORY,32312,开始建造,,0
@@ -2680,7 +2713,7 @@ FACTORY,32324,妖精重型制造,,0
 FACTORY,32325,*使用推荐公式，可以极大提高对应妖精种类的出率,,0
 FACTORY,32326,(新的回归锚定将重置现有回归锚定进度，请及时完成建造),,0
 FACTORY,32327,请在剩余时间内使用格里芬指挥官回归锚定构筑福利,,0
-FACTORY,32328,回归指挥官锚定构筑规则：//n1、指挥官可从人形列表中选择特定人形成为“锚定目标”，在锚定构筑界面点击“开始构筑”按钮，使用给定公式进行构筑；//n2、每次进行“锚定目标”的构筑，若本次构筑“锚定目标”失败，则下一次的构筑时会临时提升成功率，提升上限为100%；成功构筑“锚定目标时”，临时成功率会清零；//n3、构筑失败所提升的临时成功率，会跟随“锚定目标”进行保留，不会因为切换“锚定目标”而清零；//n、在单次回归指挥官锚定构筑中，单个“锚定目标”只能被成功构筑一次，最多可通过“锚定目标”成功构筑1个人形，多次回归指挥官锚定构筑可以选择同一个“锚定目标”，活动将在成功构筑1个人形或持续时间结束后结束；//n5、累计指定的锚定构筑次数后，锚定目标将必定构筑成功；//n6、“锚定目标”构筑成功初始几率与“工厂制造”无关,,0
+FACTORY,32328,回归指挥官锚定构筑规则：//n1、指挥官可从人形列表中选择特定人形成为“锚定目标”，在锚定构筑界面点击“开始构筑”按钮，使用给定公式进行构筑；//n2、每次进行“锚定目标”的构筑，若本次构筑“锚定目标”失败，则下一次的构筑时会临时提升成功率，提升上限为100%；成功构筑“锚定目标时”，临时成功率会清零；//n3、构筑失败所提升的临时成功率，会跟随“锚定目标”进行保留，不会因为切换“锚定目标”而清零；//n4、在单次回归指挥官锚定构筑中，单个“锚定目标”只能被成功构筑一次，最多可通过“锚定目标”成功构筑1个人形，多次回归指挥官锚定构筑可以选择同一个“锚定目标”，活动将在成功构筑1个人形或持续时间结束后结束；//n5、累计指定的锚定构筑次数后，锚定目标将必定构筑成功；//n6、“锚定目标”构筑成功初始几率与“工厂制造”无关,,0
 FACTORY,32329,当前没有可供拆解的组件,,0
 FACTORY,32330,请选择想要强化的组件,,0
 FACTORY,32331,当前没有可添加的组件,,0
@@ -3197,6 +3230,7 @@ QUESTS,38095,25级,,0
 QUESTS,38096,兑换该物品后将扣除<color=#e7a300>{0}黑卡晶片</color>，是否继续？//n你尚未收集该人形！,,0
 QUESTS,38097,兑换该物品后将扣除<color=#e7a300>{0}黑卡晶片</color>及<color=#e7a300>{1}黑卡</color>，是否继续？//n你尚未收集该人形！,,0
 QUESTS,38098,新任务,,0
+QUESTS,38099,25级获得,,0
 RANKINGLIST,39000,最底部,,1
 RANKINGLIST,39001,未上榜,,0
 RANKINGLIST,39002,转到资料采样,,1
@@ -5674,6 +5708,8 @@ OTHER,100327,请截图/点击复制分享码,,0
 OTHER,100328,输入分享码,,0
 OTHER,100329,允许直接使用其他编队中的角色,,0
 OTHER,100330,扫描分享码,,0
+OTHER,100331,每月1号0点新增{0}次购买次数。//n如往期剩余未购买次数则进行保留。,,0
+OTHER,100332,订单信息异常,,0
 ACTIVITY,110000,魔方行动,,1
 ACTIVITY,110001,盲拆法则,,0
 FRIEND,110002,友情点数,,0
